--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <h1><span class="my-name">my name is </span>Angely.</h1>
           <h2 class="programmer">a <span class="pro">pro</span>grammer</h2>
         </div>
-        <img class="hill" src="/Users/angelypontillas/Desktop/My Site/images/hill.PNG" alt="mountain-img" />
+        <img class="hill" src="/Users/angelypontillas/Desktop/My Site/images/hill.PNG" alt="/Users/angelypontillas/Desktop/My Site/images/hill.PNG" />
     
    
          <img
