media query added

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           <h2 class="programmer">a <span class="pro">pro</span>grammer</h2>
         </div>
         <img class="hill" src="images/hill.png" alt="mountain-img" />
+        <img class="hill2" src="images/hill2.png" alt="hill2-img" />
     
    
          <img
@@ -97,7 +98,7 @@
 
         <h2>My Skills.</h2>
         <div class="row">
-          <div class="col-md-6 skill-row">
+          <div class="col-md-6 skill-row skill-1">
             <img
             class="computer-image"
             src="https://media.giphy.com/media/yTFemEJxmeW2YLOT6p/giphy.gif"
@@ -110,7 +111,7 @@
             driven by my passion for coding and problem solving.
           </p>
           </div>
-          <div class="col-md-6 skill-row">
+          <div class="col-md-6 skill-row skill-2">
             <img
               class="bugs-image"
               src="https://media.giphy.com/media/3oz8xyMwU7YPmX2rVC/giphy.gif"
