--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
    
 
         <div class="container-fluid myName-sec">
-          <h1><span class="my-name">my name is </span>Angely.</h1>
+          <h1 class="big-heading" ><span class="my-name">my name is </span>Angely.</h1>
           <h2 class="programmer">a <span class="pro">pro</span>grammer</h2>
         </div>
         <img class="hill" src="images/hill.png" alt="mountain-img" />
@@ -89,14 +89,14 @@
       <section id="skills-sec">
       <div class="profile">
         <img id="angely-png" src="images/angely.png" alt="angely-profile-pic" />
-        <h2>Kamusta.</h2>
+        <h2 class="kamusta">Kamusta.</h2>
         <p class="intro">I am a Web Developer. I love boba and anime :)</p>
       </div>
       <hr />
 
 
 
-        <h2>My Skills.</h2>
+        <h2 class="skills-text">My Skills.</h2>
         <div class="row">
           <div class="col-md-6 skill-row skill-1">
             <img
@@ -104,7 +104,7 @@
             src="https://media.giphy.com/media/yTFemEJxmeW2YLOT6p/giphy.gif"
             alt=""
           />
-          <h3>Web Development</h3>
+          <h3 class="skill-heading">Web Development</h3>
           <p>
             I have always been fascinated with problem solving and this is
             what brought me to software engineering. All my projects were
@@ -117,7 +117,7 @@
               src="https://media.giphy.com/media/3oz8xyMwU7YPmX2rVC/giphy.gif"
               alt="coconut-drink"
             />
-            <h3>Debugging</h3>
+            <h3 class ="skill-heading">Debugging</h3>
             <p>
               If there is a problem, there is a solution! There is no way that a
               bug is getting away without getting caught. Not on my watch.
@@ -129,8 +129,8 @@
 
     <section id ="contactinfo">
       <div id="contact-me">
-        <h2>Get In Touch</h2>
-        <h3>I would love to chat with you!</h3>
+        <h2 class="get-in-touch-text">Get In Touch</h2>
+        <h3 class="get-in-touch-message">I would love to chat with you!</h3>
         <p class="contact-message">
           What's your favorite hobby aside from coding? Maybe we can start there
           :)
