changed img mountain source

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <h1 class="big-heading" ><span class="my-name">my name is </span>Angely.</h1>
           <h2 class="programmer">a <span class="pro">pro</span>grammer</h2>
         </div>
-        <img class="hill" src="images/hill.png" alt="mountain-img" />
+        <img class="hill" src="images/hill2.png" alt="mountain-img" />
         <img class="hill2" src="images/hill2.png" alt="hill2-img" />
     
    
