new iphone changes

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             alt=""
           />
           <h3 class="skill-heading">Web Development</h3>
-          <p>
+          <p class="skills-description">
             I have always been fascinated with problem solving and this is
             what brought me to software engineering. All my projects were
             driven by my passion for coding and problem solving.
@@ -120,7 +120,7 @@
               alt="coconut-drink"
             />
             <h3 class ="skill-heading">Debugging</h3>
-            <p>
+            <p class="skills-description">
               If there is a problem, there is a solution! There is no way that a
               bug is getting away without getting caught. Not on my watch.
             </p>
