--- a/index.html
+++ b/index.html
@@ -152,5 +152,7 @@
       <p id="copyright">© Angely Pontillas.</p>
     </div>
   </section>
+
+  <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
